--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
     <groupId>com.ximenes</groupId>
     <artifactId>sfg-pet-clinic</artifactId>
-    <version>0.0.2</version>
+    <version>0.0.3-SNAPSHOT</version>
     <name>sfg-pet-clinic</name>
     <description>SFG Pet clinic project</description>
     <properties>
@@ -42,7 +42,7 @@
 
     <scm>
         <developerConnection>scm:git:https://github.com/berkson/sfg-pet-clinic.git</developerConnection>
-      <tag>sfg-pet-clinic-0.0.2</tag>
+      <tag>sfg-pet-clinic-0.0.1</tag>
   </scm>
 
 </project>
